[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyfreedb"
authors = [
    {name = "Edwin Candinegara", email = "edwin.candinegara@gmail.com"},
    {name = "Fata Nugraha", email = "fatanugraha@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "google-api-python-client==2.51.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.5.2",
    "requests>=2.28.1, < 3"
]

[project.urls]
Home = "https://github.com/FreeLeh/PyFreeDB"

[project.optional-dependencies]
test = [
    "black==22.3.0",
    "mypy==0.961",
    "isort==5.10.1",
    "pytest==7.1.2",
    "autoflake==1.4",
    "types-requests==2.28.6",
    "coverage==6.4.4",
]
doc = [
    "pdoc3",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "integration",
]
